# Polynomial-roots

./: .gitignore  AltPrelude.hs  Configuration.Parsing.imports  Configuration.hs  Configuration.imports  GUI.Pixels.imports  IFS.hs  IFS.imports  Image.hs  Image.imports  Interval.hs  Interval.imports  Main.hs  Main.imports  MainGUI.hs  MainGUI.imports  Modes.hs  Pair.hs  Pair.imports  ParseConfig.hs  Plotting.hs  Plotting.imports  Polynomials.hs  Polynomials.imports  README  Rendering.ArrayRaster.imports  Rendering.Colour.imports  Rendering.Coord.imports  Rendering.Gradient.imports  Rendering.Raster.imports  Roots.hs  Roots.imports  Settings.hs  Settings.imports  TODO  Trees.hs  Trees.imports  Types.hs  Types.imports  Util.hs  (+6 more)
Configuration/: Parsing.hs
GUI/: Pixels.hs
Rendering/: ArrayRaster.hs  Colour.hs  Coord.hs  Gradient.hs  Raster.hs
Rendering/Colour/: Component.hs  Names.hs
src/: Configuration.hs  IFS.hs  Image.hs  Interval.hs  Main.hs  MainGUI.hs  Modes.hs  Pair.hs  Polynomials.hs  Roots.hs  Settings.hs  Trees.hs  Types.hs  Util.hs
src/Configuration/: Parsing.hs
src/Rendering/: ArrayRaster.hs  Colour.hs  Coord.hs  Gradient.hs  Raster.hs
src/Rendering/Colour/: Names.hs
